update boton que no se usaba

--- a/back-end/gestion-empleado/src/main/resources/templates/home.html
+++ b/back-end/gestion-empleado/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>EmpleosApp | Listado de Usuarios</title>
+    <title>Candidatos | Listado de Usuarios</title>
     <!-- Bootstrap core CSS -->
     <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -18,7 +18,6 @@
 
   <body>
 
-    <header th:insert="fragments/menu :: menu-principal"></header>
 
     <main role="main">     
       <hr>
